gap fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,8 +164,6 @@ ul {
     padding-left:0;
     gap:30px;
 }
-.team-list-items{
-}
 .team-list-figure{
     margin:0;
 }
